[project]
name = "tools"
version = "0.1"
requires-python = ">=3.10"
dependencies = [
    "pytest-playwright",
    "pytest-unused-port",
    "markdown",
]

[project.scripts]
extract_why = "extract_why:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["extract_why"]
